--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,6 +7,9 @@ body {
   font-size: $m-size;
 }
 
+
+// TEMPORARY
+
 .nav-link {
   display: inline-block;
   color: #ddd;
@@ -22,4 +25,10 @@ body {
 .active {
   font-weight: bold;
   color: white;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 10px;
 }
