--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -32,3 +32,21 @@ body {
   margin: 0 auto;
   padding: 10px;
 }
+
+.expense-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  min-height: 11em;
+
+  input, textarea {
+    margin-bottom: 1em;
+    padding: 0.3em;
+    width: 25em;
+  }
+
+  textarea {
+    resize: vertical;
+  }
+}
