Style ExpensesListSummary, re-factor buttons

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,5 @@
 
 @import 'components/LoginPage';
 @import 'components/Header';
+@import 'components/ExpensesSummary';
+@import 'components/page-header';
