--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,5 +5,6 @@
 
 @import 'components/LoginPage';
 @import 'components/Header';
-@import 'components/ExpensesSummary';
 @import 'components/page-header';
+@import 'components/input-group';
+@import 'components/inputs';
