--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   background: #f7f7f7;
-  margin-bottom: $l-size; 
-  padding: $l-size 0;
+  margin-bottom: $m-size; 
+  padding: $m-size 0;
 }
 
 .page-header__title {
