Style Expense List

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,10 +2,12 @@
 @import 'base/settings';
 @import 'base/base';
 @import 'base/buttons';
+@import 'base/inputs';
+@import 'base/visibility';
 
-@import 'components/LoginPage';
-@import 'components/Header';
 @import 'components/page-header';
 @import 'components/input-group';
-@import 'components/inputs';
 @import 'components/form';
+@import 'components/LoginPage';
+@import 'components/Header';
+@import 'components/ExpenseList';
