--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,12 +1,15 @@
 // Colours
 
 $dark-grey: #333333;
+$grey: #666666;
+$light-grey: #f0f0f0;
 
 $blue: #1c88bf;
 $dark-blue: #364051;
 
 // Font Size
 
+$font-size-small: 1.4rem;
 $font-size-large: 1.8rem;
 
 // Sizing
