--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -1,11 +1,11 @@
 .input-group {
-  align-items: center;
   display: flex;
   flex-direction: column;
   margin-bottom: $m-size;
   
   @media (min-width: $desktop-breakpoint) {
     flex-direction: row;
+    margin-bottom: $l-size;
   }
 }
 
