Add and test the loading page.
Running the test suite shows that many many snapshots needed updating.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import 'components/page-header';
 @import 'components/input-group';
 @import 'components/form';
+@import 'components/LoadingPage';
 @import 'components/LoginPage';
 @import 'components/Header';
 @import 'components/ExpenseList';
